# mylang

./: CONTRIBUTING.md  Cargo.toml  README.md  Testing_guide.md  syntax.mylang  test_all.sh  test_cases.md  test_cases.mylang
Notes/: Structure.md  syntax.md
cli/: Cargo.toml
cli/src/: main.rs
examples/: Readme.md  Structure.md
examples/myproject/: main.doo
examples/myproject/http/: Client.doo  Client.my
examples/myproject/models/: User.my
src/: compiler.rs  diagnostics.rs  lexer.rs  lib.rs  main.rs  parser.rs  tokens.rs
src/analyzer/: analyzer.rs  declarations.rs  expressions.rs  mod.rs  statements.rs  tests.rs  types.rs
src/cli/: mod.rs
src/codegen/: builder.rs  functions.rs  globals.rs  loops.rs  mod.rs  rc_runtime.rs  tests.rs
src/codegen/core/: context.rs  helpers.rs  mod.rs
src/codegen/instructions/: arithmetic.rs  collections.rs  constants.rs  control_flow.rs  mod.rs
src/codegen/memory/: mod.rs  rc_runtime.rs  strings.rs
src/codegen/types/: arrays.rs  maps.rs  mod.rs
src/lexar/: lexer.rs  mod.rs  tests.rs  token.rs
src/mir/: builder.rs  declarations.rs  expresssions.rs  mir.rs  mod.rs  statements.rs  tests.rs
src/parser/: ast.rs  declarations.rs  expressions.rs  mod.rs  parser.rs  statements.rs  tests.rs
tests/: basic_programs.rs  integration_tests.rs  memory_stress.rs  regressions.rs
tests/circular_import_test/: CircularA.doo  CircularB.doo  main.doo
tests/multifile_test_project/: main.doo
tests/multifile_test_project/core/: ModuleA.doo  ModuleB.doo  ModuleC.doo  logic.doo  math.doo  validation.doo
tests/multifile_test_project/services/: calculator.doo  processor.doo
tests/programs/invalid/: type_error.doo  wrong_arg_count.doo
tests/programs/valid/: arithmetic.doo  (+34 more)
