[package]
name = "mylang"
version = "0.1.0"
edition = "2021"
default-run = "mylang"

[dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
llvm-sys = "=181.2.0"
clap = { version = "4.5", features = ["derive"] }

[profile.dev]
incremental = true

[lib]
name = "mylang"
path = "src/lib.rs"

[[bin]]
name = "mylang"
path = "src/bin/mylang.rs"  # Change this

[[bin]]
name = "mylang-dev"
path = "src/main.rs"  # Keep your dev tool
