[package]
name = "doo"
version = "0.1.0"
edition = "2021"
default-run = "doo-dev"

[dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
llvm-sys = "=181.2.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1"

[profile.dev]
incremental = true

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
strip = true           # Strip symbols
panic = "abort"        # Smaller panic handler

[lib]
name = "doo"
path = "src/lib.rs"

[[bin]]
name = "doo-dev"
path = "src/main.rs"

[[bin]]
name = "doo"
path = "src/main.rs"
